# traffic-flow-display-system

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.sh  stop.sh
static/css/: style.css
static/js/: ajax-search.js  pagination.js
templates/: base.html  index.html
tests/: test_search.py  test_utils.py
utils/: __init__.py  chart_generator.py  constants.py  database.py
